# BeeSense

./: .gitattributes  .gitignore  Model.py  model.py  prediction.py  pyproject.toml  requirements.txt  template.yaml  testing.py
.aws-sam/: build.toml
Datum/: event.json
artifacts/: bee_health_model.pth  label_encoder.joblib  telemetry_scaler.joblib
audio-lambda/: README.md
audio-lambda/audio-stitch/: deploy.sh  samconfig.toml  template.yaml  test-chunk-upload.py
audio-lambda/audio-stitch/.aws-sam/: build.toml
audio-lambda/audio-stitch/.aws-sam/cache/0e78c426-c9e0-42c1-b7e2-6f9651eea7a0/boto3-1.42.48.dist-info/: RECORD
audio-lambda/audio-stitch/.aws-sam/cache/b18ec846-0306-4e92-991d-b9e0ebc9a83f/: app.py
audio-lambda/audio-stitch/.aws-sam/cache/ba6dd49a-3556-4f16-a8ac-9ec01f93c8db/: app.py
audio-lambda/audio-stitch/.aws-sam/cache/f72c32af-c04c-4721-801e-316477726701/: app.py
audio-lambda/audio-stitch/.aws-sam/cache/f72c32af-c04c-4721-801e-316477726701/botocore-1.42.48.dist-info/: RECORD
audio-lambda/audio-stitch/functions/chunk_receiver_http/: app.py
front-end/: index.html  nginx.conf
main-lambda/core/: Dockerfile  app.py  samconfig.toml
main-lambda/core/artifacts/: label_encoder.joblib
