[project]
name = "bee-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "librosa==0.11.0",
    "pandas==2.3.3",
    "torch==2.9.1",

    # 🔒 ML compatibility pins
    "scikit-learn==1.2.2",
    "numpy==1.26.4",
    "scipy==1.10.1",
    "joblib>=1.2.0"
]
